# rathole-socks5

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
src/: cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  protocol.rs  socks5.rs
tests/: integration_test.rs
tests/common/: mod.rs
tests/fixtures/: server.toml
