[package]
name = "rathole-socks5"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Minimal Rust client that turns a rathole-server-exposed TCP port into a SOCKS5 entry point."
license = "MIT"
repository = "https://github.com/rathole-org/rathole-socks5"
readme = "README.md"
keywords = ["rathole", "socks5", "proxy", "tunnel", "tokio"]
categories = ["network-programming", "command-line-utilities"]

[lib]
name = "rathole_socks5"
path = "src/lib.rs"

[[bin]]
name = "rathole-socks5"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:tracing-subscriber"]

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "sync",
    "time",
    "macros",
    "signal",
] }
sha2 = { version = "0.10", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"], optional = true }

[dev-dependencies]
rathole = { git = "https://github.com/rathole-org/rathole", rev = "5a9dd6d939744859af322aeff7fd60f7483a68bc", default-features = false, features = ["server", "client", "hot-reload"] }
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
